多线程调用shell调试